--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "jade": "~1.11.0",
     "i18n": "0.8.3"
   },
+  "scripts": {
+    "start": "node app.js"
+  },
   "homepage": "https://github.com/anders94/blockchain-demo#readme",
   "maintainers": [
     {
